# offroad-skiing-app

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-workspace.yaml  railway.json  render.yaml  tsconfig.base.json  vercel.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_init.py
apps/api/app/: main.py
apps/api/app/api/: deps.py  routes_approvals.py  routes_auth.py  routes_catalog.py  routes_planner.py  routes_profile.py  routes_trips.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: base.py  seed.py  session.py
apps/api/app/models/: domain.py
apps/api/app/schemas/: auth.py  domain.py  planner.py
apps/api/app/services/: auth.py  planner.py
apps/api/tests/: test_auth.py  test_planner_service.py
apps/web/: next-env.d.ts  next.config.ts  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/approvals/: page.tsx
apps/web/app/auth/: page.tsx
apps/web/app/checklists/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/history/: page.tsx
apps/web/components/: artifact-list.tsx  auth-form.tsx  mode-switch.tsx  planner-form.tsx  summary-card.tsx  top-nav.tsx
apps/web/lib/: api.ts  mock-data.ts  types.ts
apps/worker/: pyproject.toml  worker_main.py
apps/worker/app/: main.py
docs/: production.md
infra/docker/: Dockerfile.api  Dockerfile.web  Dockerfile.worker
infra/migrations/: 001_init.sql
(+7 files in other folders)
